# Calcubrute

./: .gitignore  CMakeLists.txt  Main.c  README.md
CPython/: PyCalcubrute.h
include/JK/: Calcubrute.h
include/JK/Calcubrute/: Common.h  Context.h  Memory.h  Program.h  Tensor2D.h  Work.h
include/JK/Calcubrute/Macro/: Branch.h  Log.h  Nonnull.h
src/: Context.c  DefaultFeatures.h  Memory.c  Program.c  Property.c  Tensor2D.c
src/shader/: WgTile.spvasm
